Fixed the blue text readable issue and adjusted download button position

--- a/less/release-9.less
+++ b/less/release-9.less
@@ -294,7 +294,6 @@
     z-index: -100;
     display: none;
     @media (min-width: 1700px) {
-      // 1200px
       display: block;
     }
     .jakartaee-9-white-paper-bg-back-layer {
@@ -328,12 +327,17 @@
     margin-top: 100px;
     margin-bottom: 100px;
   }
-
+  @media (min-width: 1700px) {
+    width: 1200px;
+  }
   .text-center {
     width: 100%;
     min-width: 400px;
     @media (min-width: @screen-sm-min) {
-      width: 400px
+      width: 440px
+    }
+    h2{
+      text-shadow: 0 0 20px rgba(250,250,250, 0.5);
     }
   }
 }
